--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
 import About from "../components/About";
-import Education from "../components/Education.js";
-import Experience from "../components/Experience.js";
+import Education from "../components/Education";
+import Experience from "../components/Experience";
 import Projects from "../components/Projects";
 import BlogList from "../components/BlogList";
 import { getCollection } from "astro:content";
