--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,4 +1,5 @@
 ---
+import "../styles/global.css";
 import Header from "../components/Header.jsx";
 import Footer from "../components/Footer.jsx";
 ---
