--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -4,15 +4,14 @@ import Header from "../components/Header.jsx";
 import Footer from "../components/Footer.jsx";
 ---
 
-<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MyPortfolio</title>
+    <title>My Portfolio</title>
     <link rel="stylesheet" href="/src/styles/global.css" />
   </head>
-  <body class="min-h-screen flex flex-col">
+  <body class="bg-base min-h-screen flex flex-col">
     <Header client:load />
     <main class="flex-grow">
       <slot />
