--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -8,7 +8,7 @@ import Footer from "../components/Footer.jsx";
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio</title>
+    <title>Manuel Costa - Software Developer</title>
     <link rel="stylesheet" href="/src/styles/global.css" />
   </head>
   <body class="bg-base min-h-screen flex flex-col">
