--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,7 +31,7 @@ const latestPosts = posts.slice(0, 2);
     <Projects client:load />
   </section>
 
-  <section id="blog" class="py-20 bg-secondary">
+  <!-- <section id="blog" class="py-20 bg-secondary">
     <BlogList client:load posts={latestPosts} />
-  </section>
+  </section> -->
 </BaseLayout>
